Pulse Feature updated

--- a/izooto/src/main/res/layout/news_hub_items.xml
+++ b/izooto/src/main/res/layout/news_hub_items.xml
@@ -106,6 +106,7 @@
                 android:layout_centerHorizontal="true"
                 android:contentDescription="@string/todo"
                 android:padding="11dp"
+                android:visibility="gone"
                 android:scaleType="fitCenter" />
 
             <ImageView
