--- a/app/src/main/res/layout/bank_item.xml
+++ b/app/src/main/res/layout/bank_item.xml
@@ -1,111 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView android:id="@+id/scrollView"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layoutData"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scrollbars="none"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <LinearLayout
+    android:orientation="vertical"
+    android:background="@color/white">
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:layout_marginLeft="@dimen/margin_10dp"
-        android:layout_marginRight="@dimen/margin_10dp"
-        android:orientation="vertical"
-        android:background="@color/white">
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:background="@drawable/bankpassbook"
-            android:layout_height="300dp"/>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <Button
-                android:layout_width="wrap_content"
-                android:textSize="14sp"
-                android:padding="@dimen/margin_10dp"
-                android:textStyle="bold"
-                android:gravity="center"
-                android:textColor="@android:color/holo_blue_dark"
-                android:background="@android:color/transparent"
-                android:layout_height="wrap_content"
-                android:text="News" />
+        android:layout_height="300dp"
+        android:background="@drawable/bankpassbook"
+        android:contentDescription="TODO"
+        android:scaleType="fitCenter" />
 
-            <Button
-                android:layout_width="wrap_content"
-                android:textSize="14sp"
-                android:padding="@dimen/margin_10dp"
-                android:textStyle="bold"
-                android:textColor="@android:color/holo_blue_dark"
-
-                android:layout_alignParentRight="true"
-                android:background="@android:color/transparent"
-                android:layout_height="wrap_content"
-                android:text="See More" />
-        </RelativeLayout>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardCornerRadius="@dimen/margin_5dp"
-            app:cardElevation="@dimen/margin_5dp"
-            android:background="@color/white"
-            >
-            <LinearLayout
-                android:id="@+id/mainView"
-                android:layout_width="match_parent"
-                android:orientation="vertical"
-                android:layout_marginBottom="@dimen/margin_10dp"
-                android:layout_height="match_parent">
-
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-
-
-
+    <LinearLayout
+        android:id="@+id/passbook"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/margin_5dp"
+        android:layout_marginTop="@dimen/margin_10dp"
+        android:layout_marginRight="@dimen/margin_5dp"
+        android:layout_weight="3"
+        android:background="@color/white"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <androidx.cardview.widget.CardView
-                android:layout_marginTop="@dimen/margin_20dp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:cardCornerRadius="@dimen/margin_10dp"
-                app:cardElevation="@dimen/margin_10dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:background="@color/white"
-                >
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="10dp"
-                    tools:ignore="UseCompoundDrawables">
+                android:text="समाचार"
+                android:textColor="@android:color/black"
+                android:textSize="15sp"
+                android:textStyle="bold" />
 
-                    <FrameLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="180dp"
-                        android:layout_marginEnd="16dp"
-                        android:scaleType="fitXY"
-                        android:background="@drawable/bankpassbook"
-                        android:contentDescription="@string/app_name"
-                        /> <!-- Replace with your drawable resource -->
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:background="@color/white"-->
+<!--                android:drawableLeft="@drawable/outline_arrow_back_24"-->
+<!--                android:text="News"-->
+<!--                android:textColor="@android:color/darker_gray"-->
+<!--                android:textSize="15sp"-->
+<!--                android:textStyle="bold" />-->
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:includeFontPadding="false"
-                        android:lineSpacingExtra="0dp"
-                        android:maxLines="3"
-                        android:textAlignment="textStart"
-                        android:textColor="@color/black"
-                        android:text="@string/app_name"
-                        android:textSize="14sp" />
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
+
         </LinearLayout>
 
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.3"
+            android:background="@color/white"
+            android:gravity="right"
+            android:text="See all"
+            android:textColor="@android:color/holo_blue_dark"
+            android:textSize="15sp"
+            android:textStyle="bold" />
     </LinearLayout>
-</ScrollView>
+
+
+</LinearLayout>
