--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,11 +2,8 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#303F9F</color>
-    <color name="gray">#E69E9C9C</color>
-    <color name="black">#000000</color>
-    <color name="white">#ffffff</color>
-    <color name="notificationBg">#ffffff</color>
-    <color name="notificationMBg">#000000</color>
+    <color name="colorAccent">#969696</color>
+    <color name="colorGray">#D3D3D3</color>
+
 
 </resources>
