--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,111 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView android:id="@+id/scrollView"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/scrollViewId"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scrollbars="none"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:scrollbars="none">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
         android:layout_marginLeft="@dimen/margin_10dp"
         android:layout_marginRight="@dimen/margin_10dp"
-        android:orientation="vertical"
-        android:background="@color/white">
+        android:gravity="center"
+        android:orientation="vertical">
+
         <FrameLayout
             android:layout_width="match_parent"
-            android:background="@drawable/bankpassbook"
-            android:layout_height="300dp"/>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <Button
-                android:layout_width="wrap_content"
-                android:textSize="14sp"
-                android:padding="@dimen/margin_10dp"
-                android:textStyle="bold"
-                android:gravity="center"
-                android:textColor="@android:color/holo_blue_dark"
-                android:background="@android:color/transparent"
-                android:layout_height="wrap_content"
-                android:text="News" />
+            android:layout_height="300dp"
+            android:background="@drawable/bankpassbook" />
 
-            <Button
-                android:layout_width="wrap_content"
-                android:textSize="14sp"
-                android:padding="@dimen/margin_10dp"
-                android:textStyle="bold"
-                android:textColor="@android:color/holo_blue_dark"
-
-                android:layout_alignParentRight="true"
-                android:background="@android:color/transparent"
-                android:layout_height="wrap_content"
-                android:text="See More" />
-        </RelativeLayout>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardCornerRadius="@dimen/margin_5dp"
-            app:cardElevation="@dimen/margin_5dp"
-            android:background="@color/white"
-            >
         <LinearLayout
             android:id="@+id/mainView"
             android:layout_width="match_parent"
-            android:orientation="vertical"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_10dp"
             android:layout_marginBottom="@dimen/margin_10dp"
-            android:layout_height="wrap_content">
+            android:background="@android:color/transparent"
+            android:orientation="vertical">
 
         </LinearLayout>
-        </androidx.cardview.widget.CardView>
-
-
-
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <androidx.cardview.widget.CardView
-                android:layout_marginTop="@dimen/margin_20dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:cardCornerRadius="@dimen/margin_10dp"
-                app:cardElevation="@dimen/margin_10dp"
+                android:layout_marginTop="@dimen/margin_20dp"
                 android:background="@color/white"
-                >
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="10dp"
-                tools:ignore="UseCompoundDrawables">
+                app:cardCornerRadius="@dimen/margin_10dp"
+                app:cardElevation="@dimen/margin_10dp">
 
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="180dp"
-                    android:layout_marginEnd="16dp"
-                    android:scaleType="fitXY"
-                    android:background="@drawable/india"
-                    android:contentDescription="@string/app_name"
-                    android:src="@drawable/india" /> <!-- Replace with your drawable resource -->
-
-                <TextView
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:includeFontPadding="false"
-                    android:lineSpacingExtra="0dp"
-                    android:maxLines="3"
-                    android:textAlignment="textStart"
-                    android:textColor="@color/black"
-                    android:text="@string/barbados_"
-                    android:textSize="14sp" />
-            </LinearLayout>
+                    android:orientation="vertical"
+                    android:padding="10dp"
+                    tools:ignore="UseCompoundDrawables">
+
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="180dp"
+                        android:layout_marginEnd="16dp"
+                        android:background="@drawable/india"
+                        android:contentDescription="@string/app_name"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/india" /> <!-- Replace with your drawable resource -->
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:includeFontPadding="false"
+                        android:lineSpacingExtra="0dp"
+                        android:maxLines="3"
+                        android:text="@string/barbados_"
+                        android:textAlignment="textStart"
+                        android:textColor="@color/black"
+                        android:textSize="14sp" />
+                </LinearLayout>
+
             </androidx.cardview.widget.CardView>
+
         </LinearLayout>
 
     </LinearLayout>
+
 </ScrollView>
