--- a/app/src/main/res/layout/bank_item.xml
+++ b/app/src/main/res/layout/bank_item.xml
@@ -13,32 +13,32 @@
         android:contentDescription="TODO"
         android:scaleType="fitCenter" />
 
-    <LinearLayout
-        android:id="@+id/passbook"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin_5dp"
-        android:layout_marginTop="@dimen/margin_10dp"
-        android:layout_marginRight="@dimen/margin_5dp"
-        android:layout_weight="3"
-        android:background="@color/white"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal">
+<!--    <LinearLayout-->
+<!--        android:id="@+id/passbook"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginLeft="@dimen/margin_5dp"-->
+<!--        android:layout_marginTop="@dimen/margin_10dp"-->
+<!--        android:layout_marginRight="@dimen/margin_5dp"-->
+<!--        android:layout_weight="3"-->
+<!--        android:background="@color/white"-->
+<!--        android:gravity="center_horizontal"-->
+<!--        android:orientation="horizontal">-->
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+<!--        <LinearLayout-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_weight="1"-->
+<!--            android:orientation="horizontal">-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:text="समाचार"
-                android:textColor="@android:color/black"
-                android:textSize="15sp"
-                android:textStyle="bold" />
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:background="@color/white"-->
+<!--                android:text="समाचार"-->
+<!--                android:textColor="@android:color/black"-->
+<!--                android:textSize="15sp"-->
+<!--                android:textStyle="bold" />-->
 
 <!--            <TextView-->
 <!--                android:layout_width="wrap_content"-->
@@ -51,19 +51,20 @@
 <!--                android:textStyle="bold" />-->
 
 
-        </LinearLayout>
+<!--        </LinearLayout>-->
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1.3"
-            android:background="@color/white"
-            android:gravity="right"
-            android:text="See all"
-            android:textColor="@android:color/holo_blue_dark"
-            android:textSize="15sp"
-            android:textStyle="bold" />
-    </LinearLayout>
+<!--        <TextView-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_weight="1.3"-->
+<!--            android:background="@color/white"-->
+<!--            android:gravity="right"-->
+<!--            android:text="See all"-->
+<!--            android:textColor="@android:color/holo_blue_dark"-->
+<!--            android:textSize="15sp"-->
+<!--            android:textStyle="bold" />-->
+
+<!--    </LinearLayout>-->
 
 
 </LinearLayout>
