SDK -Release -2.6.5 Bug Fixed

--- a/app/src/main/res/layout/pulse_temp.xml
+++ b/app/src/main/res/layout/pulse_temp.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scrollViewId"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:scrollbars="none">
@@ -11,8 +10,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginLeft="@dimen/margin_10dp"
+        android:layout_marginRight="@dimen/margin_10dp"
         android:gravity="center"
-        android:background="@android:color/transparent"
         android:orientation="vertical">
 
         <FrameLayout
