--- a/app/src/main/res/layout/bank_item.xml
+++ b/app/src/main/res/layout/bank_item.xml
@@ -13,6 +13,17 @@
         android:contentDescription="TODO"
         android:scaleType="fitCenter" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/nextPage"
+        android:layout_margin="@dimen/margin_10dp"
+        android:layout_gravity="center"
+        android:text="Notification Feed Data"
+        >
+
+    </Button>
+
 <!--    <LinearLayout-->
 <!--        android:id="@+id/passbook"-->
 <!--        android:layout_width="match_parent"-->
