--- a/izooto/src/main/res/values/colors.xml
+++ b/izooto/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="iz_white">#ffffff</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
+    <color name="iz_time">#4e4e4e</color>
     <color name="iz_notificationBg">#ffffff</color>
     <color name="iz_notificationMBg">#000</color>
     <color name="iz_nh_brand_name_color">#1155CC</color>
