--- a/izooto/src/main/res/layout/news_hub_items.xml
+++ b/izooto/src/main/res/layout/news_hub_items.xml
@@ -6,118 +6,141 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/iz_news_hub_bg"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="10dp"
         android:orientation="vertical">
 
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            app:cardCornerRadius="16dp"
+            android:layout_height="220dp"
+            android:layout_marginLeft="@dimen/margin_8dp"
+            android:layout_marginTop="@dimen/margin_8dp"
+            android:layout_marginRight="@dimen/margin_8dp"
+            app:cardCornerRadius="15dp"
             app:cardElevation="0dp">
 
-            <ImageView
-                android:id="@+id/nt_banner_image"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/iz_notificationBg"
-                android:contentDescription="@string/todo"
-                android:scaleType="fitXY" />
-        </androidx.cardview.widget.CardView>
+                android:layout_height="match_parent">
 
+                <ImageView
+                    android:id="@+id/nt_banner_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/iz_notificationBg"
+                    android:contentDescription="@string/todo"
+                    android:scaleType="fitXY" />
+
+                <TextView
+                    android:id="@+id/overlay_text"
+                    style="@style/TextAppearance.Compat.Notification.Time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start|bottom"
+                    android:background="@drawable/gradient_background"
+                    android:padding="2dp"
+                    android:paddingStart="5dp"
+                    android:paddingEnd="5dp"
+                    android:textColor="@android:color/white"
+                    android:textSize="10sp"
+                    android:visibility="gone"
+                    tools:ignore="SmallSp" />
+
+            </FrameLayout>
+
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/nt_title"
             style="@style/TextAppearance.Compat.Notification.Title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginStart="@dimen/margin_12dp"
+            android:layout_marginTop="@dimen/margin_8dp"
+            android:layout_marginEnd="@dimen/margin_8dp"
             android:maxLines="3"
-            android:text="@string/title"
+            android:text=""
             android:textAlignment="viewStart"
-            android:textColor="@color/iz_news_hub_text_color"
-            android:textSize="17dp" />
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="normal" />
 
-
-    </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="0dp">
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/circle_card"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            app:cardCornerRadius="25dp"
-            app:cardPreventCornerOverlap="false">
+            android:layout_margin="@dimen/margin_10dp"
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/circle_icon"
-                android:layout_width="17dp"
-                android:layout_height="17dp"
+                android:layout_width="@dimen/margin_15dsp"
+                android:layout_height="@dimen/margin_15dsp"
+                android:layout_gravity="center_vertical"
                 android:contentDescription="@string/todo"
                 android:scaleType="fitXY"
                 android:visibility="visible" />
 
-        </androidx.cardview.widget.CardView>
 
-        <TextView
-            android:id="@+id/publisher_"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="5dp"
-            android:layout_toEndOf="@id/circle_card"
-            android:singleLine="true"
-            android:text="Publisher"
-            android:textColor="@color/iz_news_hub_time_color"
-            android:textSize="13dp"
-            tools:ignore="RelativeOverlap" />
+            <TextView
+                android:id="@+id/publisher_"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/margin_start"
+                android:singleLine="true"
+                android:textColor="@color/iz_time"
+                android:textSize="12sp"
+                tools:ignore="RelativeOverlap" />
 
-        <TextView
-            android:id="@+id/news_hub_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="5dp"
-            android:layout_toEndOf="@+id/publisher_"
-            android:singleLine="true"
-            android:text="@string/_1_hr_ago"
-            android:textColor="@color/iz_news_hub_time_color"
-            android:textSize="13dp"
-            tools:ignore="RelativeOverlap" />
+            <ImageView
+                android:id="@+id/dot_"
+                android:layout_width="@dimen/margin_2dsp"
+                android:layout_height="@dimen/margin_2dsp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/margin_5dp"
+                android:layout_marginTop="@dimen/margin_2dp"
+                android:layout_marginEnd="@dimen/margin_5dp"
+                android:background="@drawable/circle_shape"
+                android:backgroundTint="@color/iz_time"
+                android:contentDescription="@string/todo" />
 
-        <ImageView
-            android:id="@+id/news_hub_share_icon"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:background="@drawable/circle"
-            android:contentDescription="@string/todo"
-            android:padding="11dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/ic_baseline_share_25" />
+            <TextView
+                android:id="@+id/news_hub_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:singleLine="true"
+                android:textColor="@color/iz_time"
+                android:textSize="12sp"
+                android:visibility="visible"
+                tools:ignore="RelativeOverlap" />
+
+            <ImageView
+                android:id="@+id/news_hub_share_icon"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/circle"
+                android:contentDescription="@string/todo"
+                android:padding="11dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_baseline_share_25"
+                android:visibility="gone" />
 
 
-    </RelativeLayout>
+        </LinearLayout>
+
+    </LinearLayout>
+
 
     <View
         android:id="@+id/news_hub_view"
         android:layout_width="match_parent"
-        android:layout_height="0.4dp"
+        android:layout_height="0.5dp"
         android:background="@color/dawn" />
 
 </LinearLayout>
