SDK -Pulse Feature Released 3.0.2

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,7 @@
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
+                android:visibility="visible"
                 android:background="@drawable/bankpassbook"/>
 
         <LinearLayout
